<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="front" type="the.appbuilder.coins.model.Front"/>
        <variable name="presenter" type="the.appbuilder.coins.activities.FrontRecycleListActivity"/>
    </data>
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:contentPadding="10dp"
        card_view:cardCornerRadius="4dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="@{() ->  presenter.onClick(front)}"
        >

        <!-- Loop every string attribute -->
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_front_perc"
                android:layout_weight="1"
                android:id="@+id/label_perc"
                />
            <TextView
                android:text="@{ front.getPercAsString() }"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:id="@+id/item_perc"
                android:maxLines="1"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{ front.long_var }"
            android:layout_centerVertical="true"
            android:id="@+id/item_long_var"
            android:maxLines="1"
            android:ellipsize="end"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_front_vwapdata"
                android:layout_weight="1"
                android:id="@+id/label_vwapdata"
                />
            <TextView
                android:text="@{ front.getVwapdataAsString() }"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:id="@+id/item_vwapdata"
                android:maxLines="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_front_cap24hrchange"
                android:layout_weight="1"
                android:id="@+id/label_cap24hrchange"
                />
            <TextView
                android:text="@{ front.getCap24hrchangeAsString() }"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:id="@+id/item_cap24hrchange"
                android:maxLines="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_front_supply"
                android:layout_weight="1"
                android:id="@+id/label_supply"
                />
            <TextView
                android:text="@{ front.getSupplyAsString() }"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:id="@+id/item_supply"
                android:maxLines="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_front_vwapdatabtc"
                android:layout_weight="1"
                android:id="@+id/label_vwapdatabtc"
                />
            <TextView
                android:text="@{ front.getVwapdatabtcAsString() }"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:id="@+id/item_vwapdatabtc"
                android:maxLines="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_front_price"
                android:layout_weight="1"
                android:id="@+id/label_price"
                />
            <TextView
                android:text="@{ front.getPriceAsString() }"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:id="@+id/item_price"
                android:maxLines="1"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{ front.short_var }"
            android:layout_centerVertical="true"
            android:id="@+id/item_short_var"
            android:maxLines="1"
            android:ellipsize="end"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_front_volume"
                android:layout_weight="1"
                android:id="@+id/label_volume"
                />
            <TextView
                android:text="@{ front.getVolumeAsString() }"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:id="@+id/item_volume"
                android:maxLines="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_front_mktcap"
                android:layout_weight="1"
                android:id="@+id/label_mktcap"
                />
            <TextView
                android:text="@{ front.getMktcapAsString() }"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:id="@+id/item_mktcap"
                android:maxLines="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_front_usdvolume"
                android:layout_weight="1"
                android:id="@+id/label_usdvolume"
                />
            <TextView
                android:text="@{ front.getUsdvolumeAsString() }"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:id="@+id/item_usdvolume"
                android:maxLines="1"
                />
        </LinearLayout>

    </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>